Updates to mysql class and install script.

--- a/php/http/conf/README.html
+++ b/php/http/conf/README.html
@@ -4,8 +4,8 @@
 
 <h2>Introduction</h2>
 <p>For more information, see the gus <a href="doc">doc</a></p>
-<p>For obvious reasons, this conf directory should not be web readable.
-The best practice at this stage of GUS is to soft link the index.php 
+<p>For obvious reasons, this conf directory should not be publicly web 
+readable. The best practice at this stage of GUS is to soft link the index.php
 file in the main source directory where you like in your main web 
 directory. If you are in a development environment, you can simple 
 password protect this source directory from common use.</p>
