Scott's new css in template folder.

--- a/php/http/css_template_progress/template.html
+++ b/php/http/css_template_progress/template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
 <LINK REL=StyleSheet HREF="template.css" TYPE="text/css" MEDIA=screen>
@@ -7,10 +7,13 @@
 </head>
 <body>
 	<h1 id="header_element">	
-		Gus Registration Screen; there will be a logo on the left side of this text along with the page identification	
+		Table with User Info should go here.	
 	</h1>
 	<div id="links">
 		Links to other stuff goes here! Preferably in a nav bar that isn't ugly as sin.
+	</div>
+	<div id="spreader">
+	&nbsp
 	</div>
 	<div id="content" style="content">	
 	<p> I've forgotten how much time it takes to get these damn things right<br><br> 
@@ -39,6 +42,6 @@ In 1847, in Switzerland, Dickens began Dombey and Son, which ran until April 184
 			<a href="">Group 3</a>
 		</p>
 	</div>
-	<div id="footer">The image to my right will be a watermark at the corner of the page. I haven't gotten a chance to work in photoshop yet.<div>
+	<div id="footer">This project and all its associated content is property of the GUS PHP CS383 Team.<div>
 </body>
 </html>
