more work on backend ... its pretty close... initial testing

--- a/dev/covhtml/gus_groups_utils.html
+++ b/dev/covhtml/gus_groups_utils.html
@@ -153,7 +153,7 @@
 <p id='t37' class='stm mis'>&nbsp; &nbsp; <span class='nam'>r2</span><span class='op'>.</span><span class='nam'>_role_permission_level</span> <span class='op'>=</span> <span class='num'>1</span><span class='strut'>&nbsp;</span></p>
 <p id='t38' class='stm mis'>&nbsp; &nbsp; <span class='nam'>r2</span><span class='op'>.</span><span class='nam'>save</span><span class='op'>(</span><span class='op'>)</span><span class='strut'>&nbsp;</span></p>
 <p id='t39' class='pln'>&nbsp; &nbsp; <span class='com'>#Create Regular Member Role</span><span class='strut'>&nbsp;</span></p>
-<p id='t40' class='stm mis'>&nbsp; &nbsp; <span class='nam'>gus_role</span><span class='op'>.</span><span class='nam'>objects</span><span class='op'>.</span><span class='nam'>create_role</span><span class='op'>(</span><span class='nam'>grp</span><span class='op'>,</span> <span class='str'>&#39;Member&#39;</span><span class='op'>)</span><span class='strut'>&nbsp;</span></p>
+<p id='t40' class='stm mis'>&nbsp; &nbsp; <span class='nam'>r3</span> <span class='op'>=</span> <span class='nam'>gus_role</span><span class='op'>.</span><span class='nam'>objects</span><span class='op'>.</span><span class='nam'>create_role</span><span class='op'>(</span><span class='nam'>grp</span><span class='op'>,</span> <span class='str'>&#39;Member&#39;</span><span class='op'>)</span><span class='strut'>&nbsp;</span></p>
 <p id='t41' class='pln'><span class='strut'>&nbsp;</span></p>
 <p id='t42' class='stm mis'>&nbsp; &nbsp; <span class='key'>return</span> <span class='nam'>grp</span><span class='strut'>&nbsp;</span></p>
 <p id='t43' class='pln'><span class='strut'>&nbsp;</span></p>
