--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
     <p>
       You can download this project in either
       <a href="http://github.com/arkenflame/gus/zipball/master">zip</a> or
-      <a href="http://github.com/arkenflame/gus/tarball/master">tar</a> formats.
-    </p>
+      <a href="http://github.com/arkenflame/gus/tarball/master">tar</a> formats, or browse the <a href="https://github.com/arkenflame/gus/tree/master/dev/src/src/gus2">development files</a>.</p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/arkenflame/gus</pre>
